# pepe

./: Makefile  README.md  main.py  pyproject.toml  ruff.toml
VD_games/games/: calc.py  even.py  progression.py
VD_games/scripts/: VD_brain_calc.py  VD_even.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
games_project_lazarenko/: game_engine.py
games_project_lazarenko/games/: even.py  gcd.py  guess_number.py  prime.py
games_project_lazarenko/scripts/: calc.py  even.py  gcd.py  main.py  prime.py  progression.py
