[project]
name = "games-project-lazarenko"
version = "1.0.0"
description = "игры"
authors = [
    { name = "Arseniy Lazarenko", email = "sasha9299836-rgb@gmail.com" },
]
dependencies = [
    "prompt>=0.4.1",
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.scripts]
games-app = "games_project_lazarenko.scripts.main:main"
VD-even = "games_project_lazarenko.scripts.even:main"
VD-calc = "games_project_lazarenko.scripts.calc:main"
VD-gcd = "games_project_lazarenko.scripts.gcd:main"
VD-progression = "games_project_lazarenko.scripts.progression:main"
VD-prime = "games_project_lazarenko.scripts.prime:main"
