[project]
name = "VD-games"
version = "1.0.0"
description = "Набор мини-игр для тренировки мозга"
authors = [
    { name = "Arseniy Lazarenko", email = "sasha9299836-rgb@gmail.com" },
]
dependencies = [
    "prompt>=0.4.1",
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.scripts]
games-app = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.VD_brain_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-progression = "VD_games.scripts.VD_progression:main"
VD-prime = "VD_games.scripts.VD_prime:main"
